Alexander week-1 evaluated

--- a/alexander/first_task/home.html
+++ b/alexander/first_task/home.html
@@ -5,7 +5,7 @@
 <title>Lorem ipsum</title>
 <link rel="stylesheet" type="text/css" href="home.css">
 </head>
-<body>      
+<body> <!-- FIX YOUR INDENT! Golden Rule: If element is nested withi another element it should be 2 spaces within. -->
     <div class="topElem">Dasmoto's Arts & Crafts</div>
     <div class="border" id="green">Brushes</div>
     <img src="hacksaw.jpeg" alt="Hacksaw" class="img">
