--- a/ivan/first_task/firstExercise.html
+++ b/ivan/first_task/firstExercise.html
@@ -14,6 +14,7 @@
             </div>
             <img src= "images/brushes.jpeg" alt="">
             <h3>Hacksaw Brushes</h3>
+            <!-- The blue text shouldn't have been in a <p> element, since this creates a line break. You could have used <span>, since the instructions show that there should not be a line break -->
             <p id="every">Made of the hightest quality oak, Hacksaw Brushes are known for their weight and ability to hold paint in large ammounts. Available in different sizes.<p id="blue">Starting at $3.00 / brush.</p></p>
 
             <div id="div">
@@ -21,6 +22,7 @@
             </div>
             <img src="images/frames.jpeg" alt="">
             <h3>Art Frames(Assorted)</h3>
+            <!-- The blue text shouldn't have been in a <p> element, since this creates a line break. You could have used <span>, since the instructions show that there should not be a line break -->
             <p id="every">Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.<p id="blue">Starting at $2.00 / frame</p></p>
 
             <div id="div">
@@ -28,6 +30,7 @@
             </div>
             <img src="images/finnish.jpeg" alt="">
             <h3>Clean Finnish paint</h3>
+            <!-- The blue text shouldn't have been in a <p> element, since this creates a line break. You could have used <span>, since the instructions show that there should not be a line break -->
             <p id="every"><p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity(1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.<p id="blue">Starting at $5.00 / tube</p></p>
         </body>
     </html>
