Work Reviwed -> Required Actions Documented -> Refactor Pending

--- a/alexander/third_task/about.html
+++ b/alexander/third_task/about.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sunko industries</title>
-    <link rel='icon' href='favicon.jpg' type='image/x-icon'/ >
-    <link rel="stylesheet" href="about.css">
+    <link rel='icon' href='./images/favicon.jpg' type='image/x-icon'/ >
+    <link rel="stylesheet" href="./css/about.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
 </head>
@@ -32,6 +32,11 @@
         </ul>
     </header>
     <main>
+      <!-- Cool story, bro. I like it. (y)-->
+
+      <!-- Text is too static -> add more visualization, because it feels empty
+        Example: Since the paragraphs are short, you could make it like the tea -> background image and add small black squares for the facts or something like that.
+      -->
      <h1>SUNKO INDUSTRIES</h1>
      <h2>1936</h2>
      <p>
@@ -52,7 +57,7 @@
         
         SI ЕAD has its own place in the Bulgarian history as the first and only enterprise decorated with the highest state orders of the Republic of Bulgaria.
     </p>
-    <img src="industrial.jpg" alt="Industrial zone">  
+    <img src="./images/industrial.jpg" alt="Industrial zone">  
     </main>
     <footer class="page-footer black">
         <div class="footer-copyright">
