--- a/alexander/third_task/contact.html
+++ b/alexander/third_task/contact.html
@@ -17,11 +17,11 @@
               <div class="nav-wrapper black">
                 <a href="home.html" class="brand-logo">S.industries</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-              <ul class="right hide-on-med-and-down">
-                <li><a href="home.html">Home</a></li>
-                <li><a href="catalogue.html">Catalogue</a></li>
-                <li><a href="about.html">About us</a></li>  
-              </ul>
+                <ul class="right hide-on-med-and-down">
+                  <li><a href="home.html">Home</a></li>
+                  <li><a href="catalogue.html">Catalogue</a></li>
+                  <li><a href="about.html">About us</a></li>  
+                </ul>
               </div>
             </nav>
         </div>
@@ -50,27 +50,27 @@
        <div class="container">
            <div class="row">
             <form action="#" form class="col s12">
-                <p>
+                <!-- <p> different element should be used -> you need line break -->
                   <label >
                     <input name="group1" type="radio"/>
                     <span>Male</span>
                   </label>
-                </p>
-                <p>
+                <!-- </p> -->
+                <!-- <p> -->
                     <label >
                       <input name="group1" type="radio"/>
                       <span>Female</span>
                     </label>
-                </p>
-                <p >
+                <!-- </p> -->
+                <!-- <p > -->
                     <label > 
                       <input name="group1" type="radio"/>
                       <span>Gender</span>
                     </label>
-                </p>           
+                <!-- </p>            -->
            </div>
        </div>
-       <div class="container ">
+       <div class="container">
         <div class="row">
             <form class="col s12">
                 <div class="input-field col s6 offset-s3">
