--- a/alexander/third_task/home.html
+++ b/alexander/third_task/home.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sunko industries</title>
-    <link rel='icon' href='favicon.jpg' type='image/x-icon'/ >
-    <link rel="stylesheet" href="home.css">
+    <link rel='icon' href='./images/favicon.jpg' type='image/x-icon'/ >
+    <link rel="stylesheet" href="./css/home.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
 </head>
@@ -17,14 +17,17 @@
             <div class="nav-wrapper black">
               <a href="home.html" class="brand-logo">S.industries</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            <ul class="right hide-on-med-and-down">
-              <li><a href="catalogue.html">Catalogue</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li><a href="contact.html">Contact us</a></li>  
-            </ul>
+              <ul class="right hide-on-med-and-down">
+                <li><a href="catalogue.html">Catalogue</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="contact.html">Contact us</a></li>  
+              </ul>
             </div>
           </nav>
       </div>
+
+      <!-- Good home page. -->
+
       <ul class="sidenav" id="mobile-demo">
         <li><a href="catalogue.html">Catalogue</a></li>
         <li><a href="about.html">About us</a></li>
@@ -33,7 +36,7 @@
   </header>
   <main>
     <h1>WE SIMPLY SELL WEAPONS SEE CATALOGUE</h1>
-    <img src="ak-background.jpg" alt="AK">
+    <img src="./images/ak-background.jpg" alt="AK">
   </main>
   <footer class="page-footer black">
       <div class="footer-copyright">
@@ -41,7 +44,7 @@
         <div class="right" id="rights">All rights reserved</div>
       </div>
   </footer>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> <!-- This is bloat, vanilla javascirpt works better... -> nice execute tho. -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script>
 $(document).ready(function(){
