Work Revised -> Materialize Missing, Comments added -> Pending Refactor

--- a/daniel/Week2-task1/ABOUTME.html
+++ b/daniel/Week2-task1/ABOUTME.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="ABOUTME_style.css">
+        <link rel="stylesheet" type="text/css" href="./css/ABOUTME_style.css">
         <title>Boosting acc / ABOUTME</title>
     </head>
     <body> 
@@ -24,7 +24,7 @@
                             <li>Reaching Global Elite in CSGO - playtime: 6000+ hours.</li>
                         </ul>    
                     </article>
-                <aside class="logo logo"><img src = "profilepic.jpeg" class="profile"></aside>
+                <aside class="logo logo"><img src = "./images/profilepic.jpeg" class="profile"></aside>
             </div>
         </main>
         <footer>
