--- a/daniel/Week2-task1/Boosting acc's _ CONTACT.html
+++ b/daniel/Week2-task1/Boosting acc's _ CONTACT.html
@@ -6,14 +6,14 @@
   </head>
   <body> 
     <header>
-      &lt;<a href="file:///C:/Users/USER/Desktop/Week2-task1/HOMEPAGE.html"><h3>HOME</h3></a>
+      &lt;<a href="file:///C:/Users/USER/Desktop/Week2-task1/HOMEPAGE.html"><h3>HOME</h3></a> <!-- I don't thinks so ... use relative path only!-->
       <a href="file:///C:/Users/USER/Desktop/Week2-task1/CATALOG.html"><h3>CATALOG</h3></a>
       <a href="file:///C:/Users/USER/Desktop/Week2-task1/ABOUTME.html"><h3>ABOUT ME</h3></a>
       <a href="file:///C:/Users/USER/Desktop/Week2-task1/CONTACTME.html"><h3>CONTACT ME</h3></a>
   </header>
   <main>
     <div class="container">
-      <form action="file:///C:/Users/USER/Desktop/Week2-task1/HOMEPAGE.html" method="post">
+      <form action="file:///C:/Users/USER/Desktop/Week2-task1/HOMEPAGE.html" method="post"> <!-- nope...-->
 
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name.." required="">
