--- a/daniel/Week2-task1/CATALOG.html
+++ b/daniel/Week2-task1/CATALOG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="CATALOG_style.css">
+        <link rel="stylesheet" type="text/css" href="./css/CATALOG_style.css">
         <title>Boosting acc's / CATALOG</title>
     </head>
     <body> 
@@ -25,7 +25,7 @@
                 <input type="submit" value="Order">
                 </form>
                 </article>
-            <aside class="logo logo"><img src = "catalog1.png"></aside>
+            <aside class="logo logo"><img src = "./images/catalog1.png"></aside>
         </div>
         <div class="wrapper">
                 <h2 class = "CSGO">Counter Strike: Global Offensive services</h2>
@@ -40,7 +40,7 @@
                     <input type="submit" value="Order">
                     </form>
                     </article>
-                <aside class="logo logo"><img src = "catalog2.png"></aside>
+                <aside class="logo logo"><img src = "./images/catalog2.png"></aside>
             </div>
             <div class="wrapper">
                     <h2 class = "WoW" >World of Warcraft services</h2>
@@ -49,7 +49,7 @@
                         <input type="submit" value="Order">
                         </form>
                         </article>
-                    <aside class="logo pic3"><img src = "catalog3.png"></aside>
+                    <aside class="logo pic3"><img src = "./images/catalog3.png"></aside>
                 </div>
     </main>
     <footer>
