--- a/daniel/Week2-task1/CONFIRMED.html
+++ b/daniel/Week2-task1/CONFIRMED.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="CONFIRMED_style.css">
+        <link rel="stylesheet" type="text/css" href="./css/CONFIRMED_style.css">
         <title>Boosting acc / ABOUTME</title>
     </head>
     <body> 
