--- a/daniel/Week2-task1/CONTACTME.html
+++ b/daniel/Week2-task1/CONTACTME.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="CONTACTME_style.css">
+    <link rel="stylesheet" type="text/css" href="./css/CONTACTME_style.css">
     <title>Boosting acc's / CONTACT</title>
   </head>
   <body> 
