--- a/daniel/Week2-task1/HOMEPAGE.html
+++ b/daniel/Week2-task1/HOMEPAGE.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="HOMEPAGE_style.css">
+        <link rel="stylesheet" type="text/css" href="./css/HOMEPAGE_style.css">
         <title>Boosting acc / HOMEPAGE</title>
     </head>
     <body>
@@ -15,18 +15,33 @@
             <div class="test">red</div>
         <div class = "intro">
             <h2>Cheap acc Boosting</h2>
-            <img class = "sitelogo" src = "moneybag.jpg"/>
+            <img class = "sitelogo" src = "./images/moneybag.jpg"/>
         </div>       
         <div class="wrapper">
             <h2 class = "Dota2">Dota 2</h2>
-            <article class="main">
+            <article class="main"> <!-- Why the <p> ? You have already used br, it would have been cleaner - see below. Apply to others.-->
                 <p>Stuck in MMR Hell?
                         Sick of your team mates insta-picking Invoker and Anti-Mage then proceeding to feed the entire game? Believe it or not, MMR hell is real and we can help get you out of it. Sometimes you just need a slight push in the right direction, and that’s what we’re here for!</p>
                 <p>Most asked question:</p>
                 <p>Is my Steam inventory safe? <br>
                     Yes, 100%. Our Dota 2 boosters are well trained and professional enough to only focus on their job. Furthermore, Steam guard/authenticator will safeguard your inventory at all times. There is no way someone can take any of your items without access to your phone.</p>  
+                <!-- Stuck in MMR Hell? 
+                <br>
+                Sick of your team mates insta-picking Invoker and Anti-Mage then proceeding to feed the entire game? Believe it or not,
+                MMR hell is real and we can help get you out of it. Sometimes you just need a slight push in the right direction, and
+                that’s what we’re here for! 
+                <br>
+                <br>
+                Most asked question: 
+                <br>
+                <br>
+                Is my Steam inventory safe? 
+                <br>
+                Yes, 100%. Our Dota 2 boosters are well trained and professional enough to only focus on their job. Furthermore,
+                Steam guard/authenticator will safeguard your inventory at all times. There is no way someone can take any of your
+                items without access to your phone. -->
                 </article>
-            <aside class="logo logo"><img src = "logo dota.png"></aside>
+            <aside class="logo logo"><img src = "./images/logo_dota.png"></aside>
         </div>
         <div class="wrapper">
             <h2 class = "CSGO">Counter Strike: Global Offensive</h2>
@@ -37,14 +52,14 @@
                     <p>Is my Steam inventory safe? <br>
                         Yes, 100%. Our CSGO boosters are well trained and professional enough to only focus on their job. Furthermore, Steam guard/authenticator will safeguard your inventory at all times. There is no way someone can take any of your items without access to your phone.</p>  
                 </article>
-            <aside class="logo logo"><img src = "csgo logo.jpg"></aside>
+            <aside class="logo logo"><img src="./images/csgo_logo.jpg"></aside>
         </div>
         <div class="wrapper">
             <h2 class = "WoW">World of Warcraft</h2>
                 <article class="main">
                     <p>World of Warcraft started its journey almost 15 years ago, and Classic is an authentic recreation of the game state back then. It is a cruel and sometimes frustrating old-school MMO that shall be brought back by Blizzard on 27th of August, 2019. We bet you already know everything about this game, so should you wish to skip running on your feet until level 40, grinding mobs or corpserunning through STV, our wow classic boost service is here to get you rid of it.</p>
                 </article>
-            <aside class="logo logo"><img src = "wow logo.jpg"></aside>
+            <aside class="logo logo"><img src = "./images/wow_logo.jpg"></aside>
         </div>
         </main>
         <footer>
