--- a/daniel/Week2-task1/CATALOG.html
+++ b/daniel/Week2-task1/CATALOG.html
@@ -53,7 +53,7 @@
                 </div>
     </main>
     <footer>
-            <p>copyright 2012 Boosting Acc's</p>
+        <h6>© copyright 2012 Boosting Acc's</h6>
     </footer>
     </body>
 </html>
