--- a/daniel/Week2-task1/CONFIRMED.html
+++ b/daniel/Week2-task1/CONFIRMED.html
@@ -8,14 +8,14 @@
         <main>
             <div class="container">
             <h1>Confirmed! :) </h1>
-            <img src="check mark.jpg"/>  
+            <img src="./images/check_mark.jpg"/>  
             <form action="HOMEPAGE.html" method="post">
                 <input type="submit" value="Back to Homepage"> 
             </form>
             </div>
         </main>
         <footer>
-            <p>copyright 2012 Boosting Acc's</p>
+            <h6>© copyright 2012 Boosting Acc's</h6>
         </footer>
     </body>
 </html>
