--- a/daniel/Week2-task1/old/HOMEPAGE.html
+++ b/daniel/Week2-task1/old/HOMEPAGE.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="icon" href="./images/logo_transparent.png">
-    <link rel="stylesheet" type="text/css" href="./css/homepage_style.css">
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>BoostingAcc's.eu</title>
-  </head>
-
-  <body class="light-blue lighten-5">
-    <div class="navbar-fixed">
-    <nav class="nav-wrapper indigo">
-        <div class="container">
-                <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="homepage.html" class="waves-effect waves-light pulse btn-small">Home</a></li>
-                <li><a href="CATALOG.html" class="waves-effect waves-light btn-small">Catalog</a></li>
-                <li><a href="ABOUTME.html" class="waves-effect waves-light btn-small">About</a></li>
-                <li><a href="CONTACTME.html" class="waves-effect waves-light btn-small">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-    </div>
-    <main>
-    <div class="wrapper">
-            <h2 class = " red darken-4 white-text">Dota 2</h2>
+    <head>
+        <link rel="stylesheet" type="text/css" href="./css/HOMEPAGE_style.css">
+        <title>Boosting acc / HOMEPAGE</title>
+        <!--Import Google Icon Font-->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+        <!--Let browser know website is optimized for mobile-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
+    <body>
+        <header>
+            <a href="HOMEPAGE.html"><h3>HOME</h3></a>
+            <a href="CATALOG.html"><h3>CATALOG</h3></a>
+            <a href="ABOUTME.html"><h3>ABOUT ME</h3></a>
+            <a href="CONTACTME.html"><h3>CONTACT ME</h3></a>
+        </header>
+        <main>
+        <div class = "intro"> 
+            <h2>Cheap acc Boosting</h2>
+            <img class = "sitelogo" src = "./images/moneybag.jpg"/>
+        </div>       
+        <div class="wrapper">
+            <h2 class = "Dota2">Dota 2</h2>
             <span class="main">
                 Stuck in MMR Hell? 
                 <br>
@@ -46,10 +41,10 @@
                 Steam guard/authenticator will safeguard your inventory at all times. There is no way someone can take any of your
                 items without access to your phone.
             </span>
-            <aside class="logo logo " ><img src = "./images/logo_dota.png"></aside>
+            <aside class="logo logo"><img src = "./images/logo_dota.png"></aside>
         </div>
         <div class="wrapper">
-            <h2 class = "yellow accent-3  black-text">Counter Strike: Global Offensive</h2>
+            <h2 class = "CSGO">Counter Strike: Global Offensive</h2>
                 <span class="main">
                         Why choose us?
                         <br>
@@ -67,23 +62,17 @@
             <aside class="logo logo"><img src="./images/csgo_logo.jpg"></aside>
         </div>
         <div class="wrapper">
-            <h2 class = "indigo darken-3  light-green-text text-accent-3">World of Warcraft</h2>
+            <h2 class = "WoW">World of Warcraft</h2>
                 <span class="main">
                     <p>World of Warcraft started its journey almost 15 years ago, and Classic is an authentic recreation of the game state back then. It is a cruel and sometimes frustrating old-school MMO that shall be brought back by Blizzard on 27th of August, 2019. We bet you already know everything about this game, so should you wish to skip running on your feet until level 40, grinding mobs or corpserunning through STV, our wow classic boost service is here to get you rid of it.</p>
                 </span>
             <aside class="logo logo"><img src = "./images/wow_logo.jpg"></aside>
         </div>
         </main>
-        <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
-            <div class="grid-container center">
-                <div class="item1">© 2018 Copyright - All Rights Reserved</div>
-                <div class="item2 ">
-                    <a href="#!" class="waves-effect waves-light btn-small disabled">About</a>
-                    <a href="#!" class="waves-effect waves-light btn-small disabled">Contact</a>
-                </div>
-            </div>
+        <footer>
+            <h6>© copyright 2012 Boosting Acc's</h6>
         </footer>
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
-  </body>
+        <!--JavaScript at end of body for optimized loading-->
+        <script type="text/javascript" src="js/materialize.min.js"></script>
+    </body>
 </html>
