--- a/daniel/Week2-task1/ABOUTME.html
+++ b/daniel/Week2-task1/ABOUTME.html
@@ -1,34 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="./css/ABOUTME_style.css">
-        <title>Boosting acc / ABOUTME</title>
-    </head>
-    <body> 
-        <header>
-            <a href="HOMEPAGE.html"><h3>HOME</h3></a>
-            <a href="CATALOG.html"><h3>CATALOG</h3></a>
-            <a href="ABOUTME.html"><h3>ABOUT ME</h3></a>
-            <a href="CONTACTME.html"><h3>CONTACT ME</h3></a>
-        </header>
-            
+  <head>
+    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="stylesheet" type="text/css" href="./css/aboutme_style.css">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>BoostingAcc's.eu</title>
+  </head>
+
+  <body class="light-blue lighten-5">
+    <div class="navbar-fixed">
+    <nav class="nav-wrapper indigo">
+        <div class="container">
+                <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="homepage.html" class="waves-effect waves-light btn-small">Home</a></li>
+                <li><a href="CATALOG.html" class="waves-effect waves-light btn-small">Catalog</a></li>
+                <li><a href="ABOUTME.html" class="waves-effect waves-light pulse btn-small">About</a></li>
+                <li><a href="CONTACTME.html" class="waves-effect waves-light btn-small">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    </div>
+<!----------------------------------------------------------------------------->
         <main>
             <div class="wrapper">
-                    <article class="main">
-                        <p class = "titleInfo">About Me :)</p>
-                        <p>Hello, my name is John. I am 26 years old and I'm from Texas, USA. I have been playing PC games ever since I was 5 years old and my all-time favorites are Dota 2, CSGO and WoW.
-                                I have spent quite a long time playing these games and I can proudly say that I have somewhat mastered them. That's why I am offering account boosting services for Dota2, CSGO and WoW </p>
-                        <p class = "titleInfo">Some of my achievements are:</p>
+                    <span class="main">
+                        <p class = "center amber-text text-darken-4">About Me :)</p>
+                        <p>
+                            Hello, my name is John. I am 26 years old and I'm from Texas, USA. I have been playing PC games ever since I was 5 years old and my all-time favorites are Dota 2, CSGO and WoW.
+                            I have spent quite a long time playing these games and I can proudly say that I have somewhat mastered them. That's why I am offering account boosting services for Dota2, CSGO and WoW 
+                        </p>
+                        <p class = "center amber-text text-darken-4">Some of my achievements are:</p>
                             <ul>
                             <li>Reaching Immortal rank > 2000 in Dota 2, in first ever ranked season and keep<br> this rank by now (4th season going) - playtime 10000+ hours, 10000+ games.</li>
                             <li>Reaching Global Elite in CSGO - playtime: 6000+ hours.</li>
                         </ul>    
-                    </article>
+                    </span>
                 <aside class="logo logo"><img src = "./images/profilepic.jpeg" class="profile"></aside>
             </div>
         </main>
-        <footer>
-            <p>copyright 2012 Boosting Acc's</p>
+<!----------------------------------------------------------------------------->
+        <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
+            <div class="grid-container center">
+                <div class="item1">© 2018 Copyright - All Rights Reserved</div>
+                <div class="item2 ">
+                    <a href="#!" class="waves-effect waves-light btn-small disabled">About</a>
+                    <a href="#!" class="waves-effect waves-light btn-small disabled">Contact</a>
+                </div>
+            </div>
         </footer>
-    </body>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+  </body>
 </html>
