--- a/daniel/Week2-task1/CONTACTME.html
+++ b/daniel/Week2-task1/CONTACTME.html
@@ -6,14 +6,14 @@
   </head>
   <body> 
     <header>
-      <<a href="HOMEPAGE.html"><h3>HOME</h3></a>
+      <a href="HOMEPAGE.html"><h3>HOME</h3></a>
       <a href="CATALOG.html"><h3>CATALOG</h3></a>
       <a href="ABOUTME.html"><h3>ABOUT ME</h3></a>
       <a href="CONTACTME.html"><h3>CONTACT ME</h3></a>
   </header>
   <main>
     <div class = "container">
-      <form action="HOMEPAGE.html" method="post">
+      <form action="CONFIRMED.html" method="post">
 
         <label for="fname">First Name</label>
         <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
@@ -38,7 +38,7 @@
     </div>
   </main>
   <footer>
-    <p>copyright 2012 Boosting Acc's</p>
+    <h6>© copyright 2012 Boosting Acc's</h6>
   </footer>
   </body>
 </html>
