--- a/daniel/Week2-task1/CONFIRMED.html
+++ b/daniel/Week2-task1/CONFIRMED.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="./css/CONFIRMED_style.css">
-        <title>Boosting acc / ABOUTME</title>
-    </head>
+  <head>
+    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="stylesheet" type="text/css" href="./css/confirmed_style.css">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>BoostingAcc's.eu</title>
+  </head>
     <body> 
         <main>
             <div class="container">
-            <h1>Confirmed! :) </h1>
-            <img src="./images/check_mark.jpg"/>  
-            <form action="HOMEPAGE.html" method="post">
-                <input type="submit" value="Back to Homepage"> 
-            </form>
+            <h1 class="center">Confirmed! :) </h1>
+            <img class= "container" src="./images/check_mark.jpg" alt = "checkmark" style="width: 100%"/>  
+            </div>
+            <div class="container center">
+                <a href="homepage.html" class="waves-effect waves-light pulse btn-large">Back to Homepage</a>
             </div>
         </main>
-        <footer>
-            <h6>© copyright 2012 Boosting Acc's</h6>
+        <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
+            <div class="grid-container center">
+                <div class="item1">© 2018 Copyright - All Rights Reserved</div>
+                <div class="item2 ">
+                    <a href="#!" class="waves-effect waves-light btn-small disabled">Forum</a>
+                    <a href="#!" class="waves-effect waves-light btn-small disabled">Partners</a>
+                </div>
+            </div>
         </footer>
-    </body>
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+  </body>
 </html>
