--- a/daniel/Week2-task1/HOMEPAGE.html
+++ b/daniel/Week2-task1/HOMEPAGE.html
@@ -19,9 +19,9 @@
                 <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="homepage.html" class="waves-effect waves-light pulse btn-small">Home</a></li>
-                <li><a href="CATALOG.html" class="waves-effect waves-light btn-small">Catalog</a></li>
-                <li><a href="ABOUTME.html" class="waves-effect waves-light btn-small">About</a></li>
-                <li><a href="CONTACTME.html" class="waves-effect waves-light btn-small">Contact</a></li>
+                <li><a href="catalog.html" class="waves-effect waves-light btn-small">Catalog</a></li>
+                <li><a href="aboutme.html" class="waves-effect waves-light btn-small">About</a></li>
+                <li><a href="contactme.html" class="waves-effect waves-light btn-small">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -78,8 +78,8 @@
             <div class="grid-container center">
                 <div class="item1">© 2018 Copyright - All Rights Reserved</div>
                 <div class="item2 ">
-                    <a href="#!" class="waves-effect waves-light btn-small disabled">About</a>
-                    <a href="#!" class="waves-effect waves-light btn-small disabled">Contact</a>
+                    <a href="#!" class="waves-effect waves-light btn-small disabled">Forum</a>
+                    <a href="#!" class="waves-effect waves-light btn-small disabled">Partners</a>
                 </div>
             </div>
         </footer>
