--- a/daniel/Week2-task1/CATALOG.html
+++ b/daniel/Week2-task1/CATALOG.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="./css/CATALOG_style.css">
-        <title>Boosting acc's / CATALOG</title>
-    </head>
-    <body> 
-        <header>
-            <a href="HOMEPAGE.html"><h3>HOME</h3></a>
-            <a href="CATALOG.html"><h3>CATALOG</h3></a>
-            <a href="ABOUTME.html"><h3>ABOUT ME</h3></a>
-            <a href="CONTACTME.html"><h3>CONTACT ME</h3></a>
-        </header>
+  <head>
+    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="stylesheet" type="text/css" href="./css/catalog_style.css">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>BoostingAcc's.eu</title>
+  </head>
+
+  <body class="light-blue lighten-5">
+    <div class="navbar-fixed">
+    <nav class="nav-wrapper indigo">
+        <div class="container">
+                <a class="brand-logo left "><img src="./images/logo_transparent.png"></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="homepage.html" class="waves-effect waves-light btn-small">Home</a></li>
+                <li><a href="catalog.html" class="waves-effect waves-light pulse btn-small">Catalog</a></li>
+                <li><a href="aboutme.html" class="waves-effect waves-light btn-small">About</a></li>
+                <li><a href="contactme.html" class="waves-effect waves-light btn-small">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    </div>
     <main>
           <div class="wrapper">
-            <h2 class = "Dota2">Dota 2 services</h2>
+            <h2 class = "red darken-4 white-text">Dota 2 services</h2>
             <article class="main">
                 <form action="CONTACTME.html" method="post">
                 <input type="submit" value="Order">
@@ -28,7 +43,7 @@
             <aside class="logo logo"><img src = "./images/catalog1.png"></aside>
         </div>
         <div class="wrapper">
-                <h2 class = "CSGO">Counter Strike: Global Offensive services</h2>
+                <h2 class = "yellow accent-3  black-text">Counter Strike: Global Offensive services</h2>
                 <article class="main" id="margin">
                     <form action="CONTACTME.html" method="post">
                     <input type="submit" value="Order">
@@ -43,7 +58,7 @@
                 <aside class="logo logo"><img src = "./images/catalog2.png"></aside>
             </div>
             <div class="wrapper">
-                    <h2 class = "WoW" >World of Warcraft services</h2>
+                    <h2 class = "indigo darken-3  light-green-text text-accent-3" >World of Warcraft services</h2>
                     <article class="main" id="margin2">
                         <form action="CONTACTME.html" method="post">
                         <input type="submit" value="Order">
@@ -52,8 +67,16 @@
                     <aside class="logo pic3"><img src = "./images/catalog3.png"></aside>
                 </div>
     </main>
-    <footer>
-        <h6>© copyright 2012 Boosting Acc's</h6>
+    <footer class="page-footer indigo" style="padding: 20px; margin-top: 50px;">
+        <div class="grid-container center">
+            <div class="item1">© 2018 Copyright - All Rights Reserved</div>
+            <div class="item2 ">
+                <a href="#!" class="waves-effect waves-light btn-small disabled">Forum</a>
+                <a href="#!" class="waves-effect waves-light btn-small disabled">Partners</a>
+            </div>
+        </div>
     </footer>
-    </body>
+<!--JavaScript at end of body for optimized loading-->
+<script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+</body>
 </html>
